Completed amenity dropdown and task 6 as a whole

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -80,6 +80,7 @@ div.locations:hover ul.locations-drop {
     display: block;
 }
 
-div.amenities:hover ul.amenites-drop {
+div.amenities:hover ul.amenities-drop {
     display: block;
+    padding-inline-start: 20%;
 }
