--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -84,3 +84,7 @@ div.amenities:hover ul.amenities-drop {
     display: block;
     padding-inline-start: 20%;
 }
+
+div.pop-sublist {
+    padding-inline-start: 20%;
+}
