--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,10 +1,13 @@
+body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 section.filters {
     height: 70px;
     border: 1px #DDDDDD solid;
     border-radius: 4px;
     width: 100%;
     position: relative;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 button.btn {
