Successfully handled task 7 and completed task 8

--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -9,4 +9,6 @@ body {
     color: #484848;
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    width: 100%;
+    min-height: 96vh;
 }
