--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -10,12 +10,19 @@ article.place-container {
 }
 
 article.inline {
-    display: inline-block;
+    display: inline-flexbox;
+    flex-direction: row;
 }
 
 article.block {
     margin-left: auto;
     margin-right: auto;
+    display: flexbox;
+}
+
+div.flex-box {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 div.max_guest::before {
@@ -96,6 +103,7 @@ li.pet-friendly {
     font-size: 30px;
     color: black;
     margin-bottom: 90px;
+    display: block;
 }
 
 p.info-text {
