--- a/web_static/styles/103-places.css
+++ b/web_static/styles/103-places.css
@@ -159,3 +159,22 @@ ul.amenities {
 ul.reviews {
     padding-left: 0;
 }
+
+@media screen and (max-width: 1510px) {
+    article.place-container {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+
+    section.places {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    article.place-container {
+        width: 60%;
+    }
+}
